chore: reset release config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,13 +4,9 @@
   "always-link-local": true,
   "plugins": ["node-workspace"],
   "packages": {
-    "packages/channels": {
-      "initial-version": "0.1.0"
-    },
+    "packages/channels": { },
     "packages/core-loader": {},
-    "packages/groq-store": {
-      "release-as": "5.3.0"
-    },
+    "packages/groq-store": {},
     "packages/nuxt-loader": {},
     "packages/overlays": {},
     "packages/presentation": {},
@@ -18,8 +14,6 @@
     "packages/preview-url-secret": {},
     "packages/react-loader": {},
     "packages/svelte-loader": {},
-    "packages/visual-editing-helpers": {
-      "initial-version": "0.1.0"
-    }
+    "packages/visual-editing-helpers": {}
   }
 }
