--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,10 +26,11 @@
       "rangeStrategy": "bump"
     },
     {
-      "matchDepNames": ["sanity"],
+      "matchDepNames": ["sanity", "@sanity/util"],
       "matchFileNames": [
         "packages/presentation/package.json",
-        "packages/preview-url-secret/package.json"
+        "packages/preview-url-secret/package.json",
+        "packages/visual-editing-helpers/package.json"
       ],
       "matchDepTypes": ["devDependencies", "peerDependencies"],
       "schedule": ["at any time"],
