fix(RSC): also support server components on the main route

--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -18,6 +18,7 @@
     ".": {
       "types": "./dist/index.d.ts",
       "source": "./src/index.ts",
+      "react-server": "./dist/rsc/index.react-server.js",
       "require": "./dist/index.cjs",
       "node": {
         "module": "./dist/index.js",
