--- a/apps/next/tsconfig.json
+++ b/apps/next/tsconfig.json
@@ -22,14 +22,12 @@
     "paths": {
       "@/*": ["./src/*"],
       "@sanity/overlays": ["../../packages/overlays/src"],
-      "@sanity/preview-kit-compat": ["../../packages/preview-kit-compat/src"],
-      "@sanity/react-loader": ["../../packages/react-loader/src"]
+      "@sanity/preview-kit-compat": ["../../packages/preview-kit-compat/src"]
     }
   },
   "include": [
     "../../packages/overlays/src",
     "../../packages/preview-kit-compat/src",
-    "../../packages/react-loader/src",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
