--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -112,11 +112,16 @@
     "root": true
   },
   "dependencies": {
+    "@floating-ui/react-dom": "2.0.0",
     "@sanity/client": "^6.9.1",
+    "@sanity/color": "2.2.5",
+    "@sanity/icons": "2.7.0",
     "@sanity/ui": "^1.9.3",
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "18.2.0",
+    "react-refractor": "2.1.7",
     "scroll-into-view-if-needed": "^3.1.0",
     "styled-components": "6.1.1",
     "uuid": "^9.0.1"
