fix: better support tagged releases of `sanity`

--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -144,6 +144,20 @@
     "sanity": "^3.21.1",
     "styled-components": "^5.2 || ^6.1.1"
   },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": true
+    },
+    "react-dom": {
+      "optional": true
+    },
+    "sanity": {
+      "optional": true
+    },
+    "styled-components": {
+      "optional": true
+    }
+  },
   "engines": {
     "node": ">=16.14"
   },
