--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -121,6 +121,7 @@
     "framer-motion": "^10.16.16",
     "lodash.isequal": "^4.5.0",
     "mendoza": "3.0.3",
+    "react-fast-compare": "3.2.2",
     "rxjs": "^7.8.1",
     "suspend-react": "0.1.3"
   },
