--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -151,7 +151,8 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/core-loader": "1.3.0"
+    "@sanity/core-loader": "1.3.0",
+    "fast-deep-equal": "3.1.3"
   },
   "devDependencies": {
     "@sanity/channels": "0.2.0",
