feat(deps): update sanity to ^3.23.0, update @sanity/ui to 2.0.0-beta.13

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -116,7 +116,7 @@
     "@sanity/client": "^6.10.0",
     "@sanity/color": "2.2.5",
     "@sanity/icons": "2.8.0",
-    "@sanity/ui": "^1.9.3",
+    "@sanity/ui": "2.0.0-beta.13",
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
