--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -86,14 +86,14 @@
     "@sanity/icons": "^2.8.0",
     "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
-    "@sanity/ui": "^1.9.3",
+    "@sanity/ui": "2.0.0-beta.13",
     "@vercel/stega": "0.1.0"
   },
   "devDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
-    "sanity": "3.21.3",
+    "sanity": "^3.23.0",
     "styled-components": "6.1.1",
     "typescript": "^5.3.3"
   },
@@ -101,7 +101,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
-    "sanity": "^3.21.3",
+    "sanity": "^3.23.0",
     "styled-components": "^6.1.1"
   },
   "engines": {
