--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -17,7 +17,7 @@
     "@sanity/presentation": "workspace:*",
     "apps-common": "workspace:*",
     "rxjs": "^7.8.1",
-    "sanity": "3.21.3"
+    "sanity": "^3.23.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^1.0.6",
