--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -9,8 +9,8 @@
     "@sanity/assist": "^1.2.15",
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
-    "@sanity/ui": "^1.9.3",
-    "@sanity/vision": "3.21.3",
+    "@sanity/ui": "2.0.0-beta.13",
+    "@sanity/vision": "^3.23.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "@vercel/stega": "0.1.0",
@@ -18,7 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "^7.8.1",
-    "sanity": "3.21.3",
+    "sanity": "^3.23.0",
     "sanity-plugin-asset-source-unsplash": "^1.1.2",
     "styled-components": "6.1.1",
     "typescript": "^5.3.3"
