--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -116,7 +116,7 @@
     "@sanity/groq-store": "5.3.6",
     "@sanity/icons": "^2.8.0",
     "@sanity/preview-url-secret": "^1.3.6",
-    "@sanity/ui": "^1.9.3",
+    "@sanity/ui": "2.0.0-beta.13",
     "@types/lodash.isequal": "^4.5.8",
     "framer-motion": "^10.16.16",
     "lodash.isequal": "^4.5.0",
@@ -132,7 +132,7 @@
     "happy-dom": "^12.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.21.3",
+    "sanity": "^3.23.0",
     "styled-components": "6.1.1",
     "typescript": "^5.3.3",
     "vitest": "^1.0.4"
@@ -141,7 +141,7 @@
     "@sanity/client": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.21.3",
+    "sanity": "^3.23.0",
     "styled-components": "^5.2 || ^6.1.1"
   },
   "peerDependenciesMeta": {
