fix(deps): update @sanity/color to 3.0.0-beta.9

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -114,7 +114,7 @@
   "dependencies": {
     "@floating-ui/react-dom": "2.0.0",
     "@sanity/client": "^6.10.0",
-    "@sanity/color": "2.2.5",
+    "@sanity/color": "3.0.0-beta.9",
     "@sanity/icons": "2.8.0",
     "@sanity/ui": "2.0.0-beta.13",
     "@vercel/stega": "0.1.0",
