--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -23,6 +23,7 @@
     "@sanity/svelte-loader": "workspace:*",
     "@sveltejs/adapter-auto": "^3.1.0",
     "@sveltejs/kit": "^2.0.6",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@types/cookie": "^0.6.0",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
