--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -18,17 +18,11 @@
     ".": {
       "types": "./dist/index.d.ts",
       "source": "./src/index.ts",
-      "require": "./dist/index.cjs",
-      "node": {
-        "module": "./dist/index.js",
-        "import": "./dist/index.cjs.js"
-      },
       "import": "./dist/index.js",
       "default": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
-  "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
@@ -118,11 +112,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "svelte": "^4.2.8",
     "typescript": "^5.3.3",
     "vitest": "^1.1.3"
   },
   "peerDependencies": {
-    "@sanity/client": "^6.10.0"
+    "@sanity/client": "^6.10.0",
+    "svelte": "4.x"
   },
   "engines": {
     "node": ">=18"
