--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@sanity/block-tools": "^3.23.4",
     "@sanity/cli": "^3.23.4",
+    "@sanity/client": "^6.11.1",
     "@sanity/diff": "^3.23.4",
     "@sanity/export": "^3.23.4",
     "@sanity/import": "^3.23.4",
@@ -52,6 +53,7 @@
     "overrides": {
       "@sanity/block-tools": "$@sanity/block-tools",
       "@sanity/cli": "$@sanity/cli",
+      "@sanity/client": "$@sanity/client",
       "@sanity/diff": "$@sanity/diff",
       "@sanity/export": "$@sanity/export",
       "@sanity/import-cli": "$@sanity/import-cli",
