--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -113,14 +113,15 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/groq-store": "5.3.10",
     "@sanity/icons": "^2.8.0",
     "@sanity/preview-url-secret": "^1.5.0",
     "@sanity/ui": "2.0.0-beta.17",
     "@types/lodash.isequal": "^4.5.8",
+    "fast-deep-equal": "3.1.3",
     "framer-motion": "^10.17.12",
     "lodash.isequal": "^4.5.0",
     "mendoza": "3.0.3",
+    "mnemonist": "0.39.7",
     "rxjs": "^7.8.1",
     "suspend-react": "0.1.3"
   },
