--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -152,7 +152,7 @@
   },
   "dependencies": {
     "@sanity/core-loader": "1.3.3",
-    "fast-deep-equal": "3.1.3"
+    "react-fast-compare": "3.2.2"
   },
   "devDependencies": {
     "@sanity/channels": "0.3.0",
