--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -152,7 +152,7 @@
   },
   "dependencies": {
     "@sanity/core-loader": "1.3.4",
-    "react-fast-compare": "3.2.2"
+    "fast-deep-equal": "3.1.3"
   },
   "devDependencies": {
     "@sanity/channels": "0.4.0",
