--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -99,7 +99,8 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/core-loader": "1.3.4"
+    "@sanity/core-loader": "1.3.4",
+    "fast-deep-equal": "3.1.3"
   },
   "devDependencies": {
     "@sanity/channels": "0.4.0",
