--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -139,25 +139,7 @@
     "vitest": "^1.1.3"
   },
   "peerDependencies": {
-    "@sanity/client": "^6.11.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sanity": "^3.24.1",
-    "styled-components": "^5.2 || ^6.1.1"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
-      "optional": true
-    },
-    "sanity": {
-      "optional": true
-    },
-    "styled-components": {
-      "optional": true
-    }
+    "@sanity/client": "^6.11.1"
   },
   "engines": {
     "node": ">=16.14"
