--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -192,17 +192,7 @@
     "vitest": "^1.1.3"
   },
   "peerDependencies": {
-    "@sanity/client": "^6.11.1",
-    "@sanity/icons": "^2.8.0",
-    "sanity": "^3.24.1"
-  },
-  "peerDependenciesMeta": {
-    "@sanity/icons": {
-      "optional": true
-    },
-    "sanity": {
-      "optional": true
-    }
+    "@sanity/client": "^6.11.1"
   },
   "engines": {
     "node": ">=18"
