--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,10 +26,8 @@
       "rangeStrategy": "bump"
     },
     {
-      "matchDepNames": ["sanity", "@sanity/util"],
+      "matchDepNames": ["@sanity/util"],
       "matchFileNames": [
-        "packages/presentation/package.json",
-        "packages/preview-url-secret/package.json",
         "packages/visual-editing-helpers/package.json"
       ],
       "matchDepTypes": ["devDependencies", "peerDependencies"],
