chore(apps): product page parity

--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@portabletext/svelte": "^2.1.5",
     "@sanity/image-url": "^1.0.2"
   },
   "devDependencies": {
