--- a/apps/next-server-only/package.json
+++ b/apps/next-server-only/package.json
@@ -18,6 +18,7 @@
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-kit-compat": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
+    "@sanity/react-loader": "workspace:*",
     "@sanity/vision": "^3.24.1",
     "@sanity/visual-editing-helpers": "workspace:*",
     "@tailwindcss/typography": "^0.5.10",
@@ -28,6 +29,7 @@
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
     "date-fns": "^2.30.0",
+    "fast-deep-equal": "3.1.3",
     "next": "14.0.4",
     "next-sanity": "^7.0.10",
     "react": "^18.2.0",
