--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -115,6 +115,7 @@
   "dependencies": {
     "@sanity/icons": "^2.8.0",
     "@sanity/preview-url-secret": "^1.5.3",
+    "@sanity/uuid": "3.0.2",
     "@types/lodash.isequal": "^4.5.8",
     "fast-deep-equal": "3.1.3",
     "framer-motion": "^10.18.0",
