--- a/apps/next-server-only/package.json
+++ b/apps/next-server-only/package.json
@@ -30,7 +30,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.3.0",
     "fast-deep-equal": "3.1.3",
-    "next": "14.1.0",
+    "next": "14.1.1-canary.6",
     "next-sanity": "^7.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,7 +41,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "14.1.0",
+    "@next/bundle-analyzer": "14.1.1-canary.6",
     "@types/node": "^20",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
