--- a/apps/next-server-only/package.json
+++ b/apps/next-server-only/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@vercel/speed-insights": "^1.0.7",
     "apps-common": "workspace:*",
     "autoprefixer": "^10.4.17",
     "classnames": "^2.5.1",
