--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -12,7 +12,7 @@
     "@next/bundle-analyzer": "14.1.0",
     "@portabletext/react": "^3.0.11",
     "@sanity/channels": "workspace:*",
-    "@sanity/client": "^6.11.1",
+    "@sanity/client": "6.11.3-canary.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/overlays": "workspace:*",
     "@sanity/preview-kit-compat": "workspace:*",
