--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -119,10 +119,7 @@
     "test": "vitest --pass-with-no-tests --typecheck",
     "watch": "pkg watch --strict"
   },
-  "browserslist": [
-    "> 0.2% and last 2 versions and supports es6-module and supports es6-module-dynamic-import and not dead and not IE 11",
-    "maintained node versions"
-  ],
+  "browserslist": "extends @sanity/browserslist-config",
   "prettier": {
     "plugins": [
       "prettier-plugin-packagejson"
@@ -180,7 +177,7 @@
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.11.3",
     "@sanity/icons": "^2.8.0",
-    "@sanity/pkg-utils": "^4.0.0",
+    "@sanity/pkg-utils": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^8.56.0",
