--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -62,10 +62,7 @@
     "test": "vitest --pass-with-no-tests --typecheck",
     "watch": "pkg watch --strict"
   },
-  "browserslist": [
-    "> 0.2% and last 2 versions and supports es6-module and supports es6-module-dynamic-import and not dead and not IE 11",
-    "maintained node versions"
-  ],
+  "browserslist": "extends @sanity/browserslist-config",
   "prettier": {
     "plugins": [
       "prettier-plugin-packagejson"
@@ -127,7 +124,7 @@
   "devDependencies": {
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.11.3",
-    "@sanity/pkg-utils": "^4.0.0",
+    "@sanity/pkg-utils": "^4.1.0",
     "@sanity/visual-editing-helpers": "0.2.4",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
