--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -45,10 +45,7 @@
     "test": "vitest --typecheck",
     "watch": "pkg watch --strict"
   },
-  "browserslist": [
-    "> 0.2% and last 2 versions and supports es6-module and supports es6-module-dynamic-import and not dead and not IE 11",
-    "maintained node versions"
-  ],
+  "browserslist": "extends @sanity/browserslist-config",
   "prettier": {
     "plugins": [
       "prettier-plugin-packagejson"
@@ -128,7 +125,7 @@
   "devDependencies": {
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.11.3",
-    "@sanity/pkg-utils": "^4.0.0",
+    "@sanity/pkg-utils": "^4.1.0",
     "@sanity/ui": "2.0.1",
     "@sanity/visual-editing-helpers": "0.2.4",
     "happy-dom": "^13.3.1",
