feat(svelte-loader): add local loadQuery, draft mode

--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -21,6 +21,7 @@
     "@sanity/client": "^6.12.3",
     "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
+    "@sanity/preview-url-secret": "workspace:*",
     "@sanity/svelte-loader": "workspace:*",
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/kit": "^2.5.0",
