--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -109,38 +109,34 @@
     "root": true
   },
   "dependencies": {
-    "@floating-ui/react-dom": "2.0.8",
-    "@sanity/client": "^6.12.3",
-    "@sanity/color": "3.0.0",
-    "@sanity/icons": "2.10.0",
-    "@sanity/ui": "2.0.1",
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "18.2.0",
-    "react-refractor": "2.1.7",
-    "scroll-into-view-if-needed": "^3.1.0",
-    "styled-components": "6.1.8",
-    "uuid": "^9.0.1"
+    "scroll-into-view-if-needed": "^3.1.0"
   },
   "devDependencies": {
     "@sanity/channels": "0.4.0",
+    "@sanity/client": "6.12.3",
     "@sanity/pkg-utils": "^4.1.1",
+    "@sanity/ui": "2.0.1",
     "@sanity/visual-editing-helpers": "0.2.5",
-    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.48",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
-    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint": "^8.56.0",
     "happy-dom": "^13.3.5",
     "ls-engines": "^0.9.1",
     "rimraf": "^5.0.5",
+    "styled-components": "6.1.8",
     "typescript": "^5.3.3",
+    "uuid": "9.0.1",
     "vitest": "^1.2.2"
   },
   "engines": {
