chore: setup visual editing package
Fixes CRX-498

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -14,7 +14,7 @@
     "@sanity/channels": "workspace:*",
     "@sanity/client": "6.12.3",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/overlays": "workspace:*",
+    "@sanity/visual-editing": "workspace:*",
     "@sanity/preview-kit-compat": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/react-loader": "workspace:*",
