--- a/apps/page-builder-demo/tsconfig.json
+++ b/apps/page-builder-demo/tsconfig.json
@@ -23,11 +23,13 @@
       "@/*": ["./src/*"],
       "@sanity/overlays": ["../../packages/overlays/src"],
       "@sanity/react-loader": ["../../packages/react-loader/src"],
+      "@sanity/visual-editing": ["../../packages/visual-editing/src"],
     },
   },
   "include": [
     "../../packages/csm/src",
     "../../packages/overlays/src",
+    "../../packages/visual-editing/src",
     "../../packages/react-loader/src",
     "next-env.d.ts",
     "**/*.ts",
