--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@sanity/overlays",
-  "version": "2.3.9",
-  "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/overlays#readme",
+  "name": "@sanity/visual-editing",
+  "version": "0.0.0",
+  "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/visual-editing#readme",
   "bugs": {
     "url": "https://github.com/sanity-io/visual-editing/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/sanity-io/visual-editing.git",
-    "directory": "packages/overlays"
+    "directory": "packages/visual-editing"
   },
   "license": "MIT",
   "author": "Sanity.io <hello@sanity.io>",
@@ -120,7 +120,6 @@
     "@sanity/client": "6.12.3",
     "@sanity/pkg-utils": "^4.1.2",
     "@sanity/ui": "2.0.1",
-    "@sanity/visual-editing": "workspace:*",
     "@sanity/visual-editing-helpers": "0.2.6",
     "@types/react": "^18.2.51",
     "@types/react-dom": "^18.2.18",
