--- a/release-please-config.json
+++ b/release-please-config.json
@@ -13,6 +13,7 @@
     "packages/preview-url-secret": {},
     "packages/react-loader": {},
     "packages/svelte-loader": {},
+    "packages/visual-editing": {},
     "packages/visual-editing-helpers": {}
   }
 }
