fix: add keywords

--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -1,6 +1,13 @@
 {
   "name": "@sanity/visual-editing",
   "version": "0.0.0",
+  "keywords": [
+    "sanity.io",
+    "visual-editing",
+    "presentation",
+    "preview",
+    "overlays"
+  ],
   "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/visual-editing#readme",
   "bugs": {
     "url": "https://github.com/sanity-io/visual-editing/issues"
