--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -1,6 +1,12 @@
 {
   "name": "@sanity/overlays",
   "version": "2.3.9",
+  "keywords": [
+    "sanity.io",
+    "visual-editing",
+    "presentation",
+    "preview"
+  ],
   "homepage": "https://github.com/sanity-io/visual-editing/tree/main/packages/overlays#readme",
   "bugs": {
     "url": "https://github.com/sanity-io/visual-editing/issues"
