--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -115,19 +115,10 @@
     "root": true
   },
   "dependencies": {
-    "@vercel/stega": "0.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "18.2.0",
-    "scroll-into-view-if-needed": "^3.1.0"
+    "@sanity/visual-editing": "workspace:^"
   },
   "devDependencies": {
-    "@sanity/channels": "0.4.0",
-    "@sanity/client": "6.12.3",
     "@sanity/pkg-utils": "^4.1.2",
-    "@sanity/ui": "2.0.1",
-    "@sanity/visual-editing": "1.0.0",
-    "@sanity/visual-editing-helpers": "0.2.6",
     "@types/react": "^18.2.53",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
@@ -141,9 +132,7 @@
     "happy-dom": "^13.3.8",
     "ls-engines": "^0.9.1",
     "rimraf": "^5.0.5",
-    "styled-components": "6.1.8",
     "typescript": "^5.3.3",
-    "uuid": "9.0.1",
     "vitest": "^1.2.2"
   },
   "engines": {
