--- a/apps/next-server-only/package.json
+++ b/apps/next-server-only/package.json
@@ -14,12 +14,12 @@
     "@sanity/client": "^6.12.3",
     "@sanity/icons": "^2.10.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-kit-compat": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/react-loader": "workspace:*",
     "@sanity/vision": "^3.27.1",
+    "@sanity/visual-editing": "workspace:*",
     "@sanity/visual-editing-helpers": "workspace:*",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20.5.0",
