--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -13,8 +13,8 @@
     "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.12.3",
     "@sanity/nuxt-loader": "workspace:*",
-    "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
+    "@sanity/visual-editing": "workspace:*",
     "apps-common": "workspace:*",
     "rxjs": "^7.8.1",
     "sanity": "^3.27.1"
