--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -13,8 +13,8 @@
     "@portabletext/react": "^3.0.11",
     "@sanity/demo": "^1.0.2",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
+    "@sanity/visual-editing": "workspace:*",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.8.7",
     "@types/react": "^18.2.53",
