--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -14,8 +14,8 @@
     "@remix-run/react": "^2.6.0",
     "@sanity/channels": "workspace:*",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/overlays": "workspace:*",
     "@sanity/react-loader": "workspace:*",
+    "@sanity/visual-editing": "workspace:*",
     "@vercel/remix": "^2.5.1",
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
