--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -19,10 +19,10 @@
     "@fontsource/fira-mono": "^5.0.8",
     "@neoconfetti/svelte": "^2.2.1",
     "@sanity/client": "^6.12.3",
-    "@sanity/overlays": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/svelte-loader": "workspace:*",
+    "@sanity/visual-editing": "workspace:*",
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/kit": "^2.5.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
