--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -33,12 +33,30 @@
       "import": "./dist/index.js",
       "default": "./dist/index.js"
     },
+    "./next-pages-router": {
+      "types": "./dist/next-pages-router/index.d.ts",
+      "source": "./src/next-pages-router/index.ts",
+      "require": "./dist/next-pages-router/index.cjs",
+      "node": {
+        "module": "./dist/next-pages-router/index.js",
+        "import": "./dist/next-pages-router/index.cjs.js"
+      },
+      "import": "./dist/next-pages-router/index.js",
+      "default": "./dist/next-pages-router/index.js"
+    },
     "./package.json": "./package.json"
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "next-pages-router": [
+        "./dist/next-pages-router/index.d.ts"
+      ]
+    }
+  },
   "files": [
     "dist",
     "src",
@@ -146,8 +164,16 @@
     "uuid": "9.0.1",
     "vitest": "^1.2.2"
   },
+  "peerDependencies": {
+    "next": ">= 13"
+  },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": true
+    }
+  },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18"
   },
   "publishConfig": {
     "access": "public"
