--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -44,6 +44,17 @@
       "import": "./dist/next-pages-router/index.js",
       "default": "./dist/next-pages-router/index.js"
     },
+    "./remix": {
+      "types": "./dist/remix/index.d.ts",
+      "source": "./src/remix/index.ts",
+      "require": "./dist/remix/index.cjs",
+      "node": {
+        "module": "./dist/remix/index.js",
+        "import": "./dist/remix/index.cjs.js"
+      },
+      "import": "./dist/remix/index.js",
+      "default": "./dist/remix/index.js"
+    },
     "./package.json": "./package.json"
   },
   "main": "./dist/index.cjs",
@@ -54,6 +65,9 @@
     "*": {
       "next-pages-router": [
         "./dist/next-pages-router/index.d.ts"
+      ],
+      "remix": [
+        "./dist/remix/index.d.ts"
       ]
     }
   },
@@ -141,6 +155,7 @@
     "scroll-into-view-if-needed": "^3.1.0"
   },
   "devDependencies": {
+    "@remix-run/react": "^2.6.0",
     "@sanity/channels": "0.4.0",
     "@sanity/client": "6.12.3",
     "@sanity/pkg-utils": "^4.1.3",
@@ -165,9 +180,13 @@
     "vitest": "^1.2.2"
   },
   "peerDependencies": {
+    "@remix-run/react": ">= 2",
     "next": ">= 13"
   },
   "peerDependenciesMeta": {
+    "@remix-run/react": {
+      "optional": true
+    },
     "next": {
       "optional": true
     }
