chore: always use workspace `@sanity/visual-editing`

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
       "@sanity/types": "$@sanity/types",
       "@sanity/util": "$@sanity/util",
       "@sanity/vision": "$@sanity/vision",
+      "@sanity/visual-editing": "workspace:*",
       "create-sanity": "$create-sanity",
       "groq": "$groq",
       "sanity": "$sanity",
