--- a/.github/workflows/browserslist.yml
+++ b/.github/workflows/browserslist.yml
@@ -14,9 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@d882d12c64e032187b2edb46d3a0d003b7a43598 # v2.4.0
       - uses: actions/setup-node@v4
         with:
+          cache: pnpm
           node-version: lts/*
+      - run: corepack enable && pnpm --version
+      - run: pnpm install --ignore-scripts
       - run: npx update-browserslist-db@latest
       - uses: tibdex/github-app-token@3beb63f4bd073e61482598c45c71c1019b59b73a # v2
         id: generate-token
