--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -22,7 +22,7 @@
       "groupName": "App dependencies"
     },
     {
-      "matchDepTypes": ["dependencies", "devDependencies"]
+      "matchDepTypes": ["dependencies", "devDependencies"],
       "rangeStrategy": "bump"
     },
     {
