--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -112,6 +112,7 @@
   "dependencies": {
     "@sanity/icons": "^2.10.1",
     "@sanity/preview-url-secret": "^1.6.1",
+    "@sanity/ui": "^2.0.1",
     "@sanity/uuid": "3.0.2",
     "@types/lodash.isequal": "^4.5.8",
     "fast-deep-equal": "3.1.3",
@@ -126,7 +127,6 @@
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.12.3",
     "@sanity/pkg-utils": "^4.1.4",
-    "@sanity/ui": "2.0.1",
     "@sanity/visual-editing-helpers": "0.2.6",
     "happy-dom": "^13.3.8",
     "react": "^18.2.0",
