--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/visual-editing",
-  "version": "1.2.1",
+  "version": "1.2.2-canary.0",
   "keywords": [
     "sanity.io",
     "visual-editing",
