--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -152,7 +152,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "18.2.0",
-    "scroll-into-view-if-needed": "^3.1.0"
+    "scroll-into-view-if-needed": "^3.1.0",
+    "valibot": "0.28.1"
   },
   "devDependencies": {
     "@remix-run/react": "^2.6.0",
