chore(core-loader): rework `createDataAttribute`

--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -58,6 +58,9 @@
     "*": {
       "encode-data-attribute": [
         "./dist/encode-data-attribute.d.ts"
+      ],
+      "create-data-attribute": [
+        "./dist/create-data-attribute.d.ts"
       ]
     }
   },
