--- a/apps/next-no-cache/package.json
+++ b/apps/next-no-cache/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@portabletext/react": "^3.0.11",
     "@sanity/channels": "workspace:*",
-    "@sanity/client": "^6.14.4",
+    "@sanity/client": "^6.15.0",
     "@sanity/icons": "^2.10.3",
     "@sanity/image-url": "^1.0.2",
     "@sanity/presentation": "workspace:*",
@@ -32,7 +32,7 @@
     "date-fns": "^3.3.1",
     "fast-deep-equal": "3.1.3",
     "next": "14.1.1-canary.73",
-    "next-sanity": "8.0.2",
+    "next-sanity": "8.0.3-canary.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-wrap-balancer": "^1.1.0",
