--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -12,7 +12,7 @@
     "@next/bundle-analyzer": "14.1.0",
     "@portabletext/react": "^3.0.11",
     "@sanity/channels": "workspace:*",
-    "@sanity/client": "6.14.4",
+    "@sanity/client": "6.15.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit-compat": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
@@ -27,6 +27,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "next": "14.1.0",
+    "next-sanity": "8.0.3-canary.0",
     "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
