--- a/apps/page-builder-demo/package.json
+++ b/apps/page-builder-demo/package.json
@@ -27,7 +27,7 @@
     "eslint-config-next": "14.1.0",
     "groq": "^3.30.0",
     "next": "14.1.0",
-    "next-sanity": "8.0.2",
+    "next-sanity": "8.0.3-canary.0",
     "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
