feat(visual-editing): add sveltekit specific exports

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
       "@sanity/util": "$@sanity/util",
       "@sanity/vision": "$@sanity/vision",
       "@sanity/visual-editing": "workspace:*",
+      "@sanity/visual-editing-svelte": "workspace:*",
       "create-sanity": "$create-sanity",
       "groq": "$groq",
       "sanity": "$sanity",
