--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -23,6 +23,7 @@
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/svelte-loader": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
+    "@sanity/visual-editing-svelte": "workspace:*",
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/kit": "^2.5.2",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
