--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -105,6 +105,7 @@
     "@sanity/pkg-utils": "^4.4.0",
     "@sanity/preview-url-secret": "^1.6.4",
     "@sanity/visual-editing-helpers": "0.5.2",
+    "@sanity/visual-editing-svelte": "^0.0.1",
     "@sveltejs/kit": "^2.5.2",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
