--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -104,8 +104,8 @@
     "@sanity/client": "^6.15.1",
     "@sanity/pkg-utils": "^4.4.0",
     "@sanity/preview-url-secret": "^1.6.4",
+    "@sanity/visual-editing": "workspace:*",
     "@sanity/visual-editing-helpers": "0.5.2",
-    "@sanity/visual-editing-svelte": "^0.0.1",
     "@sveltejs/kit": "^2.5.2",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
@@ -113,6 +113,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "rollup-plugin-svelte": "^7.1.6",
     "svelte": "^4.2.12",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1"
