--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -55,6 +55,11 @@
       "import": "./dist/remix/index.js",
       "default": "./dist/remix/index.js"
     },
+    "./svelte": {
+      "types": "./dist-svelte/index.d.ts",
+      "svelte": "./dist-svelte/index.js",
+      "default": "./dist-svelte/index.js"
+    },
     "./package.json": "./package.json"
   },
   "main": "./dist/index.cjs",
@@ -68,17 +73,21 @@
       ],
       "remix": [
         "./dist/remix/index.d.ts"
+      ],
+      "svelte": [
+        "./dist-svelte/index.d.ts"
       ]
     }
   },
   "files": [
     "dist",
+    "dist-svelte",
     "src",
     "CHANGELOG.md"
   ],
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "pkg build --strict && pkg --strict",
+    "build": "pkg build --strict && svelte-kit sync && svelte-package -i ./src/svelte -o dist-svelte && pkg --strict",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
     "test": "vitest --pass-with-no-tests --typecheck",
@@ -148,6 +157,7 @@
     "root": true
   },
   "dependencies": {
+    "@sanity/preview-url-secret": "workspace:^",
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -162,6 +172,9 @@
     "@sanity/pkg-utils": "^4.4.0",
     "@sanity/ui": "2.0.7",
     "@sanity/visual-editing-helpers": "0.5.2",
+    "@sveltejs/adapter-auto": "^3.1.1",
+    "@sveltejs/kit": "^2.5.2",
+    "@sveltejs/package": "^2.2.7",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
@@ -176,19 +189,32 @@
     "ls-engines": "^0.9.1",
     "rimraf": "^5.0.5",
     "styled-components": "6.1.8",
+    "svelte": "^4.2.12",
     "typescript": "^5.3.3",
     "uuid": "9.0.1",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
     "@remix-run/react": ">= 2",
-    "next": ">= 13"
+    "@sanity/client": "^6.15.1",
+    "@sveltejs/kit": ">= 2",
+    "next": ">= 13",
+    "svelte": ">= 4"
   },
   "peerDependenciesMeta": {
     "@remix-run/react": {
       "optional": true
     },
+    "@sanity/client": {
+      "optional": true
+    },
+    "@sveltejs/kit": {
+      "optional": true
+    },
     "next": {
+      "optional": true
+    },
+    "svelte": {
       "optional": true
     }
   },
