fix: don't render overlays if the Vercel Toolbar is present

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -115,7 +115,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/visual-editing": "1.6.0"
+    "@sanity/visual-editing": "workspace:*"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^4.4.1",
