--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sanity/visual-editing",
-  "version": "1.6.0",
+  "version": "1.6.1-canary.3",
   "keywords": [
     "sanity.io",
     "visual-editing",
