--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vercel/stega": "0.1.0",
+    "@vercel/toolbar": "^0.1.11",
     "apps-common": "workspace:*",
     "autoprefixer": "10.4.18",
     "eslint": "^8.57.0",
