--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -104,7 +104,7 @@
     "@sanity/client": "^6.15.2",
     "@sanity/pkg-utils": "^4.4.1",
     "@sanity/preview-url-secret": "^1.6.4",
-    "@sanity/visual-editing": "1.6.0",
+    "@sanity/visual-editing": "workspace:*",
     "@sanity/visual-editing-helpers": "0.6.0",
     "@sveltejs/kit": "^2.5.2",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
