--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -18,6 +18,7 @@
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/react-loader": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "20.8.7",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.21",
