--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -16,6 +16,7 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/react-loader": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
+    "@tailwindcss/typography": "^0.5.10",
     "@vercel/remix": "^2.8.1",
     "@vercel/stega": "0.1.0",
     "apps-common": "workspace:*",
