chore: use `@nuxtjs/sanity`

--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -9,10 +9,10 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@nuxtjs/sanity": "^1.10.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@sanity/channels": "workspace:*",
     "@sanity/client": "^6.15.4",
-    "@sanity/nuxt-loader": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
     "apps-common": "workspace:*",
