chore: stop overriding typescript, pin instead

--- a/package.json
+++ b/package.json
@@ -76,8 +76,7 @@
       "create-sanity": "$create-sanity",
       "groq": "$groq",
       "sanity": "$sanity",
-      "styled-components": "$styled-components",
-      "typescript": "$typescript"
+      "styled-components": "$styled-components"
     }
   }
 }
