--- a/apps/common/package.json
+++ b/apps/common/package.json
@@ -94,7 +94,7 @@
     "rxjs": "^7.8.1",
     "sanity": "^3.33.0",
     "styled-components": "6.1.8",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   },
   "peerDependencies": {
     "react": "^18.2.0",
