--- a/apps/next-no-cache/package.json
+++ b/apps/next-no-cache/package.json
@@ -51,6 +51,6 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   }
 }
