--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -35,6 +35,6 @@
     "styled-components": "6.1.8",
     "suspend-react": "0.1.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   }
 }
