--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -33,7 +33,7 @@
     "@types/source-map-support": "^0.5.10",
     "eslint": "^8.57.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
