--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -21,6 +21,6 @@
     "sanity": "^3.33.0",
     "sanity-plugin-asset-source-unsplash": "^2.0.1",
     "styled-components": "6.1.8",
-    "typescript": "^5.3.3"
+    "typescript": "5.3.3"
   }
 }
