--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -136,7 +136,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "happy-dom": "^13.8.4",
     "nanostores": "0.10.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
