--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -128,7 +128,7 @@
     "happy-dom": "^13.8.4",
     "ls-engines": "^0.9.1",
     "rimraf": "^5.0.5",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vitest": "^1.3.1"
   },
   "engines": {
