--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -129,7 +129,7 @@
     "react-dom": "^18.2.0",
     "sanity": "^3.33.0",
     "styled-components": "6.1.8",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
