--- a/packages/preview-kit-compat/package.json
+++ b/packages/preview-kit-compat/package.json
@@ -116,7 +116,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "react": "^18.2.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
