--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -161,7 +161,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "sanity": "^3.33.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
