--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -115,7 +115,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "rollup-plugin-svelte": "^7.2.0",
     "svelte": "^4.2.12",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vitest": "^1.3.1"
   },
   "peerDependencies": {
