--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -126,7 +126,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "react": "^18.2.0",
     "sanity": "^3.33.0",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "valibot": "0.30.0",
     "vitest": "^1.3.1"
   },
