chore: use consistent semver range

--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -12,7 +12,7 @@
     "@next/bundle-analyzer": "14.1.4",
     "@portabletext/react": "^3.0.13",
     "@sanity/channels": "workspace:*",
-    "@sanity/client": "6.15.7",
+    "@sanity/client": "^6.15.7",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit-compat": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
