--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -154,7 +154,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/preview-url-secret": "1.6.5",
+    "@sanity/preview-url-secret": "^1.6.5",
     "@vercel/stega": "0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
