chore: test canary of studio

--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@sanity/block-tools": "^3.36.4",
-    "@sanity/cli": "^3.36.4",
+    "@sanity/block-tools": "3.36.5-canary.34",
+    "@sanity/cli": "3.36.5-canary.34",
     "@sanity/client": "^6.15.9",
-    "@sanity/diff": "^3.36.4",
-    "@sanity/export": "^3.36.4",
-    "@sanity/import": "^3.36.4",
-    "@sanity/import-cli": "^3.36.4",
-    "@sanity/mutator": "^3.36.4",
-    "@sanity/portable-text-editor": "^3.36.4",
-    "@sanity/schema": "^3.36.4",
-    "@sanity/types": "^3.36.4",
-    "@sanity/util": "^3.36.4",
-    "@sanity/vision": "^3.36.4",
-    "create-sanity": "^3.36.4",
-    "groq": "^3.36.4",
-    "sanity": "^3.36.4",
+    "@sanity/diff": "3.36.5-canary.34",
+    "@sanity/export": "3.36.5-canary.34",
+    "@sanity/import": "3.36.5-canary.34",
+    "@sanity/import-cli": "3.36.5-canary.34",
+    "@sanity/mutator": "3.36.5-canary.34",
+    "@sanity/portable-text-editor": "3.36.5-canary.34",
+    "@sanity/schema": "3.36.5-canary.34",
+    "@sanity/types": "3.36.5-canary.34",
+    "@sanity/util": "3.36.5-canary.34",
+    "@sanity/vision": "3.36.5-canary.34",
+    "create-sanity": "3.36.5-canary.34",
+    "groq": "3.36.5-canary.34",
+    "sanity": "3.36.5-canary.34",
     "styled-components": "6.1.8"
   },
   "devDependencies": {
