chore: move shared `package.config.ts` to a private workspace

--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -121,6 +121,7 @@
     "async-cache-dedupe": "2.1.0"
   },
   "devDependencies": {
+    "@repo/package.config": "workspace:*",
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
