--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -119,6 +119,7 @@
     "suspend-react": "0.1.3"
   },
   "devDependencies": {
+    "@repo/package.config": "workspace:*",
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
