--- a/packages/preview-kit-compat/package.json
+++ b/packages/preview-kit-compat/package.json
@@ -103,6 +103,7 @@
     "root": true
   },
   "devDependencies": {
+    "@repo/package.config": "workspace:*",
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
