--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -113,6 +113,7 @@
     "@sanity/visual-editing": "1.8.7"
   },
   "devDependencies": {
+    "@repo/package.config": "workspace:*",
     "@sanity/pkg-utils": "^5.1.12",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
