--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -144,6 +144,7 @@
     "@sanity/uuid": "3.0.2"
   },
   "devDependencies": {
+    "@repo/package.config": "workspace:*",
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/icons": "^2.11.7",
