--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -140,6 +140,7 @@
     "fast-deep-equal": "3.1.3"
   },
   "devDependencies": {
+    "@repo/package.config": "workspace:*",
     "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
