--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -112,6 +112,7 @@
     "root": true
   },
   "devDependencies": {
+    "@repo/package.config": "workspace:*",
     "@sanity/client": "^6.15.11",
     "@sanity/util": "^3.36.4",
     "@types/react": "^18.2.74",
