refactor: rename `@sanity/channels` to `@repo/channels` as it's a private package

--- a/apps/nuxt/package.json
+++ b/apps/nuxt/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@nuxtjs/sanity": "^1.11.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "@sanity/channels": "workspace:*",
+    "@repo/channels": "workspace:*",
     "@sanity/client": "^6.15.11",
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
