--- a/apps/remix/package.json
+++ b/apps/remix/package.json
@@ -13,7 +13,7 @@
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
-    "@sanity/channels": "workspace:*",
+    "@repo/channels": "workspace:*",
     "@sanity/image-url": "^1.0.2",
     "@sanity/react-loader": "workspace:*",
     "@sanity/visual-editing": "workspace:*",
