--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -121,8 +121,8 @@
     "async-cache-dedupe": "2.1.0"
   },
   "devDependencies": {
+    "@repo/channels": "0.4.0",
     "@repo/package.config": "workspace:*",
-    "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
     "@sanity/visual-editing-helpers": "0.6.4",
