--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -144,8 +144,8 @@
     "@sanity/uuid": "3.0.2"
   },
   "devDependencies": {
+    "@repo/channels": "0.4.0",
     "@repo/package.config": "workspace:*",
-    "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/icons": "^2.11.7",
     "@sanity/pkg-utils": "^5.1.12",
