--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -164,8 +164,8 @@
   },
   "devDependencies": {
     "@remix-run/react": "^2.8.1",
+    "@repo/channels": "0.4.0",
     "@repo/package.config": "workspace:*",
-    "@sanity/channels": "0.4.0",
     "@sanity/client": "6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
     "@sanity/ui": "2.1.0",
