--- a/apps/next-server-only/package.json
+++ b/apps/next-server-only/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.17",
-    "@sanity/channels": "workspace:*",
+    "@repo/channels": "workspace:*",
     "@sanity/client": "^6.15.11",
     "@sanity/icons": "^2.11.7",
     "@sanity/image-url": "^1.0.2",
