--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next/bundle-analyzer": "14.1.4",
     "@portabletext/react": "^3.0.17",
-    "@sanity/channels": "workspace:*",
+    "@repo/channels": "workspace:*",
     "@sanity/client": "^6.15.11",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-kit-compat": "workspace:*",
