--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -119,8 +119,8 @@
     "suspend-react": "0.1.3"
   },
   "devDependencies": {
+    "@repo/channels": "0.4.0",
     "@repo/package.config": "workspace:*",
-    "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
     "@sanity/visual-editing-helpers": "0.6.4",
