--- a/packages/presentation/tsconfig.json
+++ b/packages/presentation/tsconfig.json
@@ -6,7 +6,7 @@
     "strictNullChecks": true,
     "paths": {
       "@sanity/preview-url-secret": ["../preview-url-secret/src"],
-      "@sanity/channels": ["../channels/src"],
+      "@repo/channels": ["../channels/src"],
       "@sanity/visual-editing-helpers": ["../visual-editing-helpers/src"]
     }
   },
