--- a/packages/preview-kit-compat/package.json
+++ b/packages/preview-kit-compat/package.json
@@ -103,8 +103,8 @@
     "root": true
   },
   "devDependencies": {
+    "@repo/channels": "0.4.0",
     "@repo/package.config": "workspace:*",
-    "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
     "@sanity/visual-editing-helpers": "0.6.4",
