--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -140,8 +140,8 @@
     "fast-deep-equal": "3.1.3"
   },
   "devDependencies": {
+    "@repo/channels": "0.4.0",
     "@repo/package.config": "workspace:*",
-    "@sanity/channels": "0.4.0",
     "@sanity/client": "^6.15.11",
     "@sanity/pkg-utils": "^5.1.12",
     "@sanity/visual-editing-helpers": "0.6.4",
